--- a/app.json
+++ b/app.json
@@ -2,9 +2,15 @@
   "name": "checkplant-test",
   "displayName": "checkplant-test",
   "expo": {
-    "name": "checkplant-test",
+    "name": "Checkplant Test",
     "slug": "checkplant-test",
     "version": "1.0.0",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#fff"
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
